style.css
#chatBox{
    height: 400px;
    width: auto;
    border: 3px solid rgb(194, 194, 194);
    padding: 3px;
    overflow: scroll;
}

#messageText{
    color: rgb(155, 155, 255);
}

footer{
    color: rgba(204, 202, 202, 0.671);
}

#sendMessage{
    background: rgb(204, 202, 202);
}

input{
    text-align: center;
}

#mediaBox{
    width: 100%;
    /* position: relative; */
    height: auto;
    margin: 1px;
}
#timestampText{
    color: rgba(206, 206, 206, 0.671);
}

#cardDiv, p {
    padding: 0 !important;
    margin: 3px !important;
}

/* the id from above will lighten the color and can add teh timestamp for it, 
then could use the media div to populate a random picture of a superhero or sci-fi 
or other fantasy character as the img */

